--- a/app.html
+++ b/app.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Js Practise</h1>
+
+    <script>
+        alert('This is Vishal The Pro Programmer');
+    </script>
 </body>
 </html>
