--- a/app.html
+++ b/app.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>Js Practise</h1>
+    <div id="div"></div>
 
     <script>
         alert('This is Vishal The Pro Programmer');
+        document.getElementById('div').innerHTML="This is Numan";
     </script>
 </body>
 </html>
