--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <title>Js</title>
 </head>
 <body>
-    <h1>Js Practise</h1>
+    <h1>Js Practise Basic</h1>
     <div id="div"></div>
 
     <script>
