--- a/app.html
+++ b/app.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Js Practise Basic</h1>
+    <h2>learning Javascript</h2>
     <div id="div">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium libero provident nemo. Sapiente dolorem, rerum perspiciatis incidunt eveniet ratione illum deleniti, a blanditiis asperiores nobis, atque numquam facilis dolores dolor nisi at suscipit delectus corporis nihil. Incidunt eligendi ea, blanditiis praesentium reprehenderit tempore voluptatum aliquam architecto similique fugit dignissimos unde.
     </div>
