external script updated

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 
-    <script>
-        console.log("Greeting from the Javascript!!!");
-    </script>
+    <script src="index.js"></script>
+    <script src="other.js"></script>
     
 </body>
 </html>
