--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image.png" href="favicon.png">
-    <title>Javascript embedded into the HTML</title>
+    <title>Javascript embedded into the HTML Intro</title>
 </head>
 <body>
 
