--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image.png" href="favicon.png">
-    <title>Javascript embedded into the HTML Intro</title>
+    <title>Function</title>
 </head>
 <body>
 
-    <script>
-        console.log("Greeting from the Javascript!!!");
+    <script src="index.js">
+      <h1>Function</h1>
     </script>
     
 </body>
